--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
-    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
